--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>SynthSphere</h1>
+        <h1>SynthSphere1</h1>
         <h4>"Innovation Meets Inspiration"</h4>
         <br>
         <br>
