change in simpcomp

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <a href="IncomeTaxCalc.html"><button>Income Calculator</button></a><br>
         <a href="factorial.html"><button>Factorial</button></a><br>
         <a href="payroll.html"><button>Payroll</button></a><br>
+        <a href="simplecomputations.html"><button>Payroll</button></a><br>
+
 
         </div>
         <!-- Load external JavaScript -->
