--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>SynthSphere1</h1>
+        <h1>SynthSphere</h1>
         <h4>"Innovation Meets Inspiration"</h4>
         <br>
         <br>
@@ -20,7 +20,19 @@
         <a href="IncomeTaxCalc.html"><button>Income Calculator</button></a><br>
         <a href="factorial.html"><button>Factorial</button></a><br>
         <a href="payroll.html"><button>Payroll</button></a><br>
-        <a href="simplecomputations.html"><button>Payroll</button></a><br>
+        <a href="simplecomputations.html"><button>SimpleComputations</button></a><br>
+    <!--<label for="converter">Computations:</label><br>
+    <select name="converter" id="converter">
+        <option>Select Computation</option>
+        <option value="add2numbers.html">Calculator</option>
+        <option value="gradecomputation-copy.html" >Grade Computation</option>
+        <option value="simpcomp.html">Converters</option>
+        <option value="IncomeTaxCalc.html">Income Calculator</option>
+        <option value="factorial.html">Factorial</option>
+        <option value="payroll.html">Payroll</option>
+        <option value="simplecomputations.html">SimpleComputations</option>
+    </select><br><br>
+    <input type=button value="Go" id="goToNewPage" />-->
 
 
         </div>
