--- a/add2numbers.html
+++ b/add2numbers.html
@@ -2,17 +2,19 @@
 <html>
 <head>
 <title>Page Title</title>
+<meta charset="utf-8">
+        <link rel="stylesheet" href="add2numbers.css">
 </head>
 <body>
 
 <h1>Add 2 Numbers</h1>
 
+<div id="inputsdiv">
  <label for="n1">First number:</label><br>
   <input type="number" id="n1"><br>
-
  <label for="n2">Second number:</label><br>
   <input type="number" id="n2"><br>
-
+</div>
 
   <button id="btnclear2numbers">ClearValues</button><br>
 
