--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <br>
         <br>
         <div class="menubtns">
-        <a href="add2numbers.html"><button>Calculator</button></a><br>
-        <a href="gradecomputation-copy.html"><button>Grade Computation</button></a><br>
-        <a href="simpcomp.html"><button>Converters</button></a><br>
+        <a href="add2numbers.html"><button>Addition Calculator</button></a><br>
+        <a href="simplecomputations.html"><button>Converter Calculator</button></a><br>
+        <a href="factorial.html"><button>Factorial Calculator</button></a><br>
+        <a href="gradecomputation-copy.html"><button>Grade Calculator</button></a><br>
         <a href="IncomeTaxCalc.html"><button>Income Calculator</button></a><br>
-        <a href="factorial.html"><button>Factorial</button></a><br>
         <a href="payroll.html"><button>Payroll</button></a><br>
-        <a href="simplecomputations.html"><button>SimpleComputations</button></a><br>
+
     <!--<label for="converter">Computations:</label><br>
     <select name="converter" id="converter">
         <option>Select Computation</option>
