--- a/FEETOMEE.html
+++ b/FEETOMEE.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="payroll.css">
+</head>
 <body>
 
 <h1>Feet to Meter</h1>
-<p>My first paragraph.</p>
 
 <label for="ft">Feet:</label><br>
   <input type="number" id="ft"><br>
@@ -16,6 +19,7 @@
   <a href="index.html">Go to homepage</a><br>
 
 <script>
+  
 document.getElementById("btnclear2numbers").addEventListener("click", 
    ()=>{
     document.getElementById("mtr").value='';
